rem camel, and other non required parts